--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -155,7 +155,7 @@
             <div>图2-17&nbsp;全球新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
 
-        <h3>附录</h3>
+        <h3>2.8&nbsp;附录</h3>
         <div id="2_18" style="width: 800px;height:858px;"></div>
         <div>图2-18&nbsp;各国累计检测数（仅显示累计确诊人数超过2000的国家中累计检测数前20个国家，部分国家检测数据更新不及时）</div>
 
@@ -447,7 +447,7 @@
         if(error){
             console.log(error);
         }else{
-            barchart_num(csvdata.slice(0,20), "累计检测数", '2_18', [24000000, 6000000]);
+            barchart_num(csvdata.slice(0,20), "累计检测数", '2_18', [28000000, 7000000]);
         }
     });
 
@@ -463,7 +463,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_yAxis_barchart(csvdata, "“一带一路”国家（65个国家地区合计）", '2_20',[50000, 50000, 10000]);
+            bi_yAxis_barchart(csvdata, "“一带一路”国家（65个国家地区合计）", '2_20',[60000, 50000, 10000]);
         }
     });
 
@@ -471,7 +471,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_yAxis_barchart(csvdata, "非洲国家（52个国家地区合计）", '2_21',[8000, 6000, 2000]);
+            bi_yAxis_barchart(csvdata, "非洲国家（52个国家地区合计）", '2_21',[10000, 6000, 2000]);
         }
     });
 
@@ -479,7 +479,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_yAxis_barchart(csvdata, '周边国家（20个国家地区合计）', '2_22',[30000, 25000, 5000]);
+            bi_yAxis_barchart(csvdata, '周边国家（20个国家地区合计）', '2_22',[35000, 30000, 5000]);
         }
     });
 
