--- a/main/templates/report.html
+++ b/main/templates/report.html
@@ -35,12 +35,17 @@
         .green {
             background-color: lightgreen;
         }
+        .last {
+            margin-bottom: 45px;
+        }
     </style>
 </head>
 <body>
-<div class="container fixed-top" style="text-align: right; margin-top: 20px;">
+<div class="container fixed-top" style="text-align: right; margin-top: 25px;">
     <a id="download" href="{% static 'report/report.docx' %}"></a>
-    <button id="create_btn" class="btn btn-info ladda-button" data-style="zoom-out" onclick="createReport()">生成周报</button>
+    <button id="create_btn" class="btn btn-info ladda-button" data-style="zoom-out" onclick="createReport()">生成疫情周报</button>
+    <br>
+    <button class="btn btn-warning" style="margin-top: 10px;" onclick="showMissingCountries()">查看忽略国家</button>
 </div>
 <div class="container">
     <div>
@@ -98,9 +103,9 @@
             <div>注：确诊率为累计确诊人数占总人口的百分比，病死率为累计病死人数占累计确诊人数的百分比。</div>
         </div>
         
-        <div id="2_5" style="width: 800px;height:430px;"></div>
+        <div id="2_5" style="width: 850px;height:430px;"></div>
         <div>图 2-5&nbsp;全球累计确诊人数来源构成（显示前15个国家）</div>
-        <div id="2_6" style="width: 800px;height:430px;"></div>
+        <div id="2_6" style="width: 850px;height:430px;"></div>
         <div>图 2-6&nbsp;全球累计病死人数来源构成（显示前15个国家）</div>
 
         <!--<h3>2.2 全球本周新增确诊<span class="14"><font>&nbsp;Null&nbsp;</font></span>例，病死：<span class="16"><font>&nbsp;Null&nbsp;</font></span>例</h3>-->
@@ -126,11 +131,11 @@
             <div>图2-12&nbsp;全球本周新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
         <h3>2.4&nbsp;全球本周新增确诊主要来源：<span class="18"><font>&nbsp;Null&nbsp;</font></span>、<span class="20"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_13" style="width: 800px;height:430px;"></div>
+        <div id="2_13" style="width: 850px;height:430px;"></div>
         <div>图2-13&nbsp;全球本周新增确诊人数来源构成（显示前15个国家）</div>
 
         <h3>2.5&nbsp;全球本周新增病死主要来源：<span class="22"><font>&nbsp;Null&nbsp;</font></span>、<span class="24"><font>&nbsp;Null&nbsp;</font></span></h3>
-        <div id="2_14" style="width: 800px;height:430px;"></div>
+        <div id="2_14" style="width: 850px;height:430px;"></div>
         <div>图2-14&nbsp;全球本周新增病死人数来源构成（显示前15个国家）</div>
 
         <h3>2.6&nbsp;本周新增确诊增长最快：<span class="26"><font>&nbsp;Null&nbsp;</font></span>，新增病死增长最快：<span class="30"><font>&nbsp;Null&nbsp;</font></span></h3>
@@ -150,9 +155,27 @@
             <div>图2-17&nbsp;全球新增确诊人数增长曲线（a）、新增病死人数增长曲线（b）</div>
         </div>
 
-        <h3>附录</h3>
+        <h3>2.8&nbsp;附录</h3>
         <div id="2_18" style="width: 800px;height:858px;"></div>
         <div>图2-18&nbsp;各国累计检测数（仅显示累计确诊人数超过2000的国家中累计检测数前20个国家，部分国家检测数据更新不及时）</div>
+
+        <div id="2_19" style="width: 800px;height:550px;"></div>
+        <div>图2-19&nbsp;全球215个国家地区单日新增确诊和新增治愈走势</div>
+        <div id="2_20" style="width: 800px;height:550px;"></div>
+        <div>图2-20&nbsp;“一带一路”65个国家地区单日新增确诊和新增治愈走势</div>
+        <div id="2_21" style="width: 800px;height:550px;"></div>
+        <div>图2-21&nbsp;非洲52个国家地区单日新增确诊和新增治愈走势</div>
+        <div id="2_22" style="width: 800px;height:550px;"></div>
+        <div>图2-22&nbsp;周边20个国家地区单日新增确诊和新增治愈走势</div>
+
+        <div id="2_23" style="width: 800px;height:550px;"></div>
+        <div>图2-23&nbsp;上行阶段26个国家地区单日新增确诊和新增治愈走势</div>
+        <div id="2_24" style="width: 800px;height:550px;"></div>
+        <div>图2-24&nbsp;震荡阶段28个国家地区单日新增确诊和新增治愈走势</div>
+        <div id="2_25" style="width: 800px;height:550px;"></div>
+        <div>图2-25&nbsp;下行阶段28个国家地区单日新增确诊和新增治愈走势</div>
+        <div id="2_26" style="width: 800px;height:550px;"></div>
+        <div>图2-26&nbsp;尾期阶段27个国家地区单日新增确诊和新增治愈走势</div>
         <!-- <div id="2_18" style="width: 800px;"></div>
         <div>
             图2-18&nbsp;本周较上周新增确诊人数增速（仅显示累计确诊人数超过1万的国家中增速绝对值大于等于20%的国家）<br>
@@ -167,6 +190,22 @@
 </div>
 
 <script>
+    var countries = [];
+    var ineffectiveCountries = [];
+    {% for country in missing_countries %}
+        countries.push("{{country}}");
+    {% endfor %}
+    {% for country in ineffective_countries %}
+        ineffectiveCountries.push("{{country}}");
+    {% endfor %}
+    var alertInfo = `
+        缺失国家：${countries}
+        错误国家：${ineffectiveCountries}
+    `
+    if (countries.length || ineffectiveCountries.length){
+        alert(alertInfo);
+    }
+    var rate_countries_num = 0;
     var imagesInfo = {};
     var text = "";
     var cases_3 = [];
@@ -369,7 +408,7 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_15");
+            rate_countries_num += bi_directional_barchart(csvdata, "本周较上周新增确诊人数增速", "2_15");
         }
     });
 
@@ -377,9 +416,10 @@
         if(error){
             console.log(error);
         }else{
-            bi_directional_barchart(csvdata, "本周较上周新增病死人数增速", "2_16");
+            rate_countries_num += bi_directional_barchart(csvdata, "本周较上周新增病死人数增速", "2_16");
         }
     });
+
     d3.csv("{% static export_dir|add:'2-17-a.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
@@ -411,30 +451,103 @@
     //     }
     // });
 
-    d3.csv("{% static export_dir|add:'appendix-3.csv' %}", function (error, csvdata) {
+    d3.csv("{% static export_dir|add:'2-18.csv' %}", function (error, csvdata) {
         if(error){
             console.log(error);
         }else{
-            barchart_num(csvdata.slice(0,20), "累计检测数", '2_18');
+            barchart_num(csvdata.slice(0,20), "累计检测数", '2_18', [100000000, 25000000]);
         }
     });
+
+    d3.csv("{% static export_dir|add:'2-19.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "全球（215个国家地区合计）", '2_19',[250000, 300000, 50000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-20.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "“一带一路”国家（65个国家地区合计）", '2_20',[100000, 80000, 20000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-21.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "非洲国家（52个国家地区合计）", '2_21',[18000, 12000, 3000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-22.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, '周边国家（20个国家地区合计）', '2_22',[60000, 50000, 10000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-23.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "上行阶段（26个国家地区合计）", '2_23',[160000, 200000, 40000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-24.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "震荡阶段（28个国家地区合计）", '2_24',[25000, 30000, 5000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-25.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "下行阶段（28个国家地区合计）", '2_25',[80000, 80000, 20000]);
+        }
+    });
+
+    d3.csv("{% static export_dir|add:'2-26.csv' %}", function (error, csvdata) {
+        if(error){
+            console.log(error);
+        }else{
+            bi_yAxis_barchart(csvdata, "尾期阶段（27个国家地区合计）", '2_26',[4000, 5000, 1000]);
+        }
+    });
+
     var flag = true;
     var loading = Ladda.create($("#create_btn")[0]);
     function createReport() {
         if (flag){
             loading.start();
-            $.post('{% url "saveImage" %}',{'baseimg': JSON.stringify(imagesInfo), 'text': text },function (result, statue) {  //JSON.stringify({'2_5':imagesInfo['2_5']})
+            $.post('{% url "saveImage" %}',{'baseimg': JSON.stringify(imagesInfo), 'text': text, 'num': rate_countries_num},function (result, statue) {  //JSON.stringify({'2_5':imagesInfo['2_5']})
                 if (!result.result){
                     alert(result.error);
                 }else {
                     // alert("周报生成成功！");
                     $("#download")[0].click();
-                    flag = false;
+                    // flag = false;
                 }
                 loading.stop();
             });
         }else{
             $("#download")[0].click();
+        }
+    }
+
+    function showMissingCountries() {
+        if (countries.length || ineffectiveCountries.length){
+            alert(alertInfo);
+        }else{
+            alert("暂无缺失国家");
         }
     }
 </script>
